--- a/scripts/localhost.conf
+++ b/scripts/localhost.conf
@@ -20,19 +20,19 @@ stateOrProvinceName_default = Ontario
 localityName = Ottawa
 localityName_default = Ottawa
 
-organizationName = Markbot
-organizationName_default = Markbot
+organizationName = Lintbot
+organizationName_default = Lintbot
 
 # Use a friendly name here because its presented to the user. The server's DNS
 #   names are placed in Subject Alternate Names. Plus, DNS names here is deprecated
 #   by both IETF and CA/Browser Forums. If you place a DNS name here, then you
 #   must include the DNS name in the SAN too (otherwise, Chrome and others that
 #   strictly follow the CA/Browser Baseline Requirements will fail).
-commonName = Markbot
-commonName_default = Markbot
+commonName = Lintbot
+commonName_default = Lintbot
 
-emailAddress = hey@thomasjbradley.ca
-emailAddress_default = hey@thomasjbradley.ca
+emailAddress = hello@jevi.me
+emailAddress_default = hello@jevi.me
 
 # Section x509_ext is used when generating a self-signed certificate. I.e., openssl req -x509 ...
 [ x509_ext ]
